--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ublry267/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ublry267/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752635.md#1" target="_blank">程晓容：台海两岸关系的走向由谁主导？</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752635.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1908100551522378-150x120.jpg" align ="left"></a>现在，中共头痛万分：香港说“不”，台湾说“不”，暴政怎得天下归心？所以，只要中共当政，什么样的“统一”都不会成功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:21 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744836.md#1" target="_blank">【2019盘点】中国十大网络热点新闻</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744836.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fudan-600x400-2-150x120.jpg" align ="left"></a>2019年已接近尾声，中国大陆网络热闹非凡。虽然中共一惯地封杀和打压网络言论自由，但中国民众仍通过微博、论坛等发表自己的意见，他们表达了对中共专制政权的唾弃，曝光了被中共掩盖的部分真相。为此，大纪元为您回顾2019年的十大网络热点事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752280.md#1" target="_blank">大陆银行理财收益降至3.97% 连跌21个月</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752280.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/a9317ab93314058a4688a54777701778-150x120.jpg" align ="left"></a>大陆11月份的财富管理收益指数显示，今年11月份，银行理财平均收益较10月份下滑1BP（1BP=0.01个百分点）至3.97%，这已经是连续21个月出现环比下跌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 3:02 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752148.md#1" target="_blank">港警官吐露心声：被迫处于冲突中心 支持调查</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752148.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/hong-kong-poster-anti-communist-1200x800-600x400-1-1-150x120.jpg" align ="left"></a>圣诞节期间，香港再次爆发警民冲突，上百人被逮捕，引起争议的港警处于冲突中心。德广联驻记者在香港采访了一名警官。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 11:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752142.md#1" target="_blank">上海青浦监狱数名受酷刑外国人揭恐怖内幕</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-80154634-150x120.jpg" align ="left"></a>上周，圣诞求救信披露上海青浦监狱强制外国囚犯劳动恶行。数名名曾被关在该监狱的受害者揭发更多恐怖细节，其中一名男子是求救信主笔者之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 10:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752063.md#1" target="_blank">黄之锋入选金融时报全球50大重要人物</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752063.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/wong1-150x120.jpg" align ="left"></a>英国《金融时报》日前公布了2010年以来过去10年影响全球的50位重要人物名单，其中香港众志秘书长黄之锋以“香港政治活动人士”的身份入选，成为唯一上榜的香港人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751906.md#1" target="_blank">台总统辩论29日14点登场 蔡韩宋直接对决</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751906.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e0efaae6822ba9c1df1384a9ad1ea6d0-150x120.jpg" align ="left"></a>2020总统唯一一场由公视举办的总统辩论会29日下午2时登场，总统辩论会协商代表也是民进党立法院党团书记长李俊俋受访表示，政见会与辩论会差异性不大，准备的方式一样，着重于3年的政绩透过辩论会向人民报告。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 8:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751793.md#1" target="_blank">美癌症中心高层人事突变 曝光中共何种野心</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751793.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Mckinley-Exterior-640x367-150x120.jpg" align ="left"></a>上周，“H·李·莫菲特癌症中心和研究所”领导层的突然变动震惊了坦帕湾医学界，并迅速促使州议会的议员采取了不寻常的举措开展调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 8:12 AM							</td></tr>
@@ -19,17 +24,12 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750485.md#1" target="_blank">红色资金介入大选 台查获最大两岸地下汇兑</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750485.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-505204462-150x120.jpg" align ="left"></a>距离台湾2020年1月11日总统大选仅剩两周时间，地下选举赌盘热钱四处窜流，台湾当局为防范中共红色资金渗透而严密查缉，12月25日查获一博弈集团透过两岸地下汇兑记录高达139亿台币，约合4.6亿美元，创史上最高，检调单位怀疑与大选赌盘有关。台湾针对2020大选已进行四波查缉赌博行动，查获选举相关赌盘共计58起。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751072.md#1" target="_blank">为保经济增长 中共明年或增发10%地方债</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751072.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/economy-construction-tian-jing-GettyImages-474029480-600x400-150x120.jpg" align ="left"></a>中国财政科学研究院院长刘尚希12月26日表示，为了保证经济增长，中共当局明年可能允许地方当局增加发行约10%的专项债，即地方当局被允许发行约2.4万亿元人民币专项债用于基建项目。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751131.md#1" target="_blank">山东警察跨省抓捕 丁家喜等人下落不明</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751131.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3-21-150x120.jpg" align ="left"></a>12月26日晚，新公民运动组织者之一，北京维权律师丁家喜，福建维权人士戴振亚分别被山东警方带走。目前，没有进一步消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 5:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11750092.md#1" target="_blank">【直播预告】2020元旦游行 民阵：毋忘承诺</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11750092.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15c802dd36a4caca_ttl7daypca_15c80228ebc37821_ttl7dayLwx_01____20190923-1920x1080-v1-3-150x120.jpg" align ="left"></a>香港民阵再次发起元旦大游行，以“毋忘承诺 并肩同行”为主题，2020年1月1日由维多利亚公园步行至遮打道行人专用区，暂时未获警方发出不反对通知书。新唐人电视台和大纪元将进行网络直播，请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 5:02 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751027.md#1" target="_blank">程晓容：法制人权黑暗年 2019的中国故事</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751027.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-77223993-150x120.jpg" align ="left"></a>要想了解中国，不应听信中共兜售的故事，因为那些章节里的鲜花和光环，碾碎了几代中国人的权利和幸福、还企图淹没苦难中的呐喊和抗争。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 4:55 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750581.md#1" target="_blank">【拍案惊奇】香港水源是否完全依赖大陆？</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750581.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e4678d97207c6d_ttl7day5N1_tn1227-150x120.jpg" align ="left"></a>今天是美东时间的2019年12月27日，周五。今天我们来聊一个话题，这个话题经常会在网上引起争论，就是香港的水资源，是不是完全依赖大陆？很多网友在争论的时候，各说各话，多是喊口号，很少有人深入细致去分析。今天我们谈这个。我们就事论事，在这场香港“水革命”持续的时候，谈谈香港的“水”，到底是怎么来的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 3:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749930.md#1" target="_blank">3万元鹤岗买房 学者：产业不振 人口外流</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a4-1@1200x1200-1-150x120.jpg" align ="left"></a>3万～5万元人民币就能在鹤岗买房安家，使这个黑龙江的小城市成为了“网红”。有学者认为， “产业不振和人口外流”的循环，使鹤岗楼市跌到“白菜价”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 2:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750889.md#1" target="_blank">被指垄断 丰田汽车被中共罚款8761万</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750889.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_101986585-150x120.jpg" align ="left"></a>丰田汽车（中国）投资有限公司被中共指责涉垄断，日前被罚款8761.3万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 2:01 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750751.md#1" target="_blank">中共批台大开民主倒车 学者讥中国有民主？</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750751.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/c369fca47693132d48911e39739a0252-150x120.jpg" align ="left"></a>中共国台办反对中华民国立法院通过“反渗透法”，还说这是“大开民主倒车”。对此，台湾师范大学政治学系教授范世平《反渗透法》12月27日嘲讽“中共这么关心台湾的民主？中国自己有民主吗？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 1:34 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752431.md#1" target="_blank">杭州一合资化工厂仓库着火</a><br></h3>12月29日早上，杭州钱塘新区一化工厂仓库着火。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 3:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752467.md#1" target="_blank">充电时手机爆炸 浙江男子被烧致面目全非</a><br></h3>近日，浙江海宁市民王先生半躺在床上休息时，拿起正放在床头柜上充电的手机，就在他拿起手机的一刹那，手机突然发生爆炸，致使他身上多处被烧伤，脸部几乎面目全非。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 3:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751864.md#1" target="_blank">内蒙古公安警官枪杀两副局长 当局封口</a><br></h3>圣诞节当日，大陆内蒙古一森林公安局的警官突然枪击5名同事，致其中两名副局长身亡。中共公安部和内蒙古当局派人进驻当地调查，并全面封锁消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 7:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751457.md#1" target="_blank">曾陷冤狱7年 法轮功学员赵吉元再遭冤判</a><br></h3>曾陷冤狱7年的辽宁省沈阳市大东区法轮功学员赵吉元，于7月10日再度被绑架，近日被沈阳市和平区法院非法判刑7年半。赵吉元已上诉到中级法院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 2:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750592.md#1" target="_blank">【翻墙必看】中共到了最后解体的时刻？</a><br></h3>不久前，美国国际宗教自由委员会委员鲍尔说：“我们收到中共政府内乱和中国一些地区反对中共政权的报告。”鲍尔认为，中共的解体可能以非常快的速度发生。那么，中共真的到了最后解体的时刻吗？答案是肯定的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 9:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747235.md#1" target="_blank">甘肃庆阳市法轮功学员被迫害情况综述（上）</a><br></h3>20年来，据不完全统计，甘肃庆阳市一千多位修炼者遭到残酷的迫害，其中，被迫害致死或迫害离世30人，被非法判刑的77人次，被非法劳教的70多人次，遭到非法关押、刑事拘留的及传唤的500多人次，被非法开除公职的17人，被警察等抢去的钱财达几百万元之多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751269.md#1" target="_blank">贪污逾千万元 内蒙古通辽政协高官获刑17年</a><br></h3>12月28日，中共内蒙古通辽市政协前副主席吴国林（副厅级）被判刑17年。其被指贪污逾千万元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:38 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751100.md#1" target="_blank">河北公务员骗取养老金7千万 用于个人挥霍</a><br></h3>中共河北省人力资源和社会保障厅养老计发处原工作人员邓绍中贪污案的细节被曝光，指其用非法手段骗取养老金7000万余元（人民币，下同），大部分用于个人挥霍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 4:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ublry267/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ublry267/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
